# solar-panel-payback

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
pysolar/: Dockerfile  __init__.py  log.py  models.py  server.py
tests/: conftest.py  test_payback.py  test_server.py
