[tool.poetry]
name = "pysolar"
version = "0.1.0"
description = "Python API that computes the payback time of solar panels"
authors = ["Mateusz Mozgawa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
openpyxl = "^3.1.2"
pyxlsb = "^1.0.10"
fastapi = {extras = ["all"], version = "^0.95.2"}


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.3.0"
coverage = "^7.2.7"
isort = "^5.12.0"
mypy = "^1.3.0"
pre-commit = "^3.3.2"
pylint = "^2.17.4"
pytest = "^7.3.1"
radon = "^6.0.1"
docformatter = "^1.7.1"
pandas-stubs = "^2.0.1.230501"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 310
line_length = 100

[tool.pylint.messages_control]
max-line-length = 100

disable = ["C0103"]
